<resources>
    <string name="app_name">Marvel Challenge</string>
    <string name="facebook_app_id">645604580152211</string>
    <string name="fb_login_protocol_scheme">fb645604580152211</string>
    <string name="facebook_auth_error">Error login with facebook</string>


    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_confirm_password_hint">Confirm Password</string>
    <string name="signup_create_account">Create Account</string>
    <string name="button_login_text">Login</string>
    <string name="is_it_new_user_text">New User?</string>
    <string name="create_an_account_text">Create an Account</string>
    <string name="new_account_text">Already have an account?</string>
    <string name="logo_description">Marvel Challenge Logo</string>

    <!--    bottom nav-->
    <string name="bottom_nav_first_item_text">Characters</string>
    <string name="bottom_nav_second_item_text">Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_thumbnail">Image of the marvel hero</string>
    <string name="character_details_comics_header">Appears in these comics</string>
    <string name="error_message">Oops! There are some missing inputs</string>
    <string name="password_error">Seems there is a password mismatch</string>
    <string name="missing_inputs_error">Oops! There are some missing inputs</string>
    <string name="error_creating_user">Oops! Problem creating user</string>


</resources>